# cms

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.sh  db.sqlite3  package-lock.json  package.json  passenger_wsgi.py  postcss.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  start.py  test.json  urls.py
.github/workflows/: black.yml  ci.yml  codeql.yml  django.yml
abstract/blocks/: __init__.py  articles.py  banner.py  blockquote.py  calendar.py  calender.py  call.py  card.py  cards.py  chooser.py  embed.py  events.py  gallery.py  grabber.py  grid.py  heading.py  hero.py  html.py  image.py  media.py  member.py  members.py  newsletter.py  organisation.py  paragraph.py  person.py  profiles.py  project.py  spacer.py  split.py  table.py  video.py
abstract/models/: __init__.py  events.py  links.py
abstract/pages/: article.py  base.py  calendar.py  contact.py  device.py  flex.py  folder.py  home.py  index.py  project.py  search.py
blocks/: models.py
blocks/blocks/: __init__.py  banner.py  calender.py  call.py  card.py  embed.py  events.py  gallery.py  grabber.py  grid.py  heading.py  hero.py  html.py  image.py  person.py  project.py  split.py  table.py  video.py
chooser/: apps.py  view.py  views.py  wagtail_hooks.py  widgets.py
cms/: urls.py  wsgi.py
cms/blocks/: apps.py  models.py
cms/commands/: apps.py
cms/core/: apps.py  forms.py  image_formats.py  models.py  sitemaps.py  views.py  wagtail_hooks.py
cms/devices/: apps.py  models.py  urls.py  (+3 more)
core/: image_formats.py  models.py  sitemaps.py  views.py  wagtail_hooks.py
devices/: models.py  urls.py  utils.py  views.py  wagtail_hooks.py
django_components/: __init__.py  component_registry.py  middleware.py
embeds/: models.py
events/: models.py  wagtail_hooks.py
fablab_web/: apps.py  blocks.py  models.py
forms/: forms.py  models.py
global/: apps.py  models.py
models/: wagtail_hooks.py
newsletter/: models.py  views.py  wagtail_hooks.py
organisation/: view.py  wagtail_hooks.py  widgets.py
persons/: models.py  wagtail_hooks.py
projects/: models.py  wagtail_hooks.py
search/: views.py
settings/: base.py  dev.py  production.py
site_chooser/: apps.py  views.py  wagtail_hooks.py  widgets.py
site_models/: apps.py  models.py  wagtail_hooks.py
site_settings/: models.py
snippets/: models.py
templates/: 404.html  admin.html  base.html  components.yaml  password_required.html
test_components/: apps.py  components.py
user/: admin.py  models.py
(+813 files in other folders)
