[tool.poetry]
name = "cms"
version = "0.9"
description = ""
authors = ["Max Graw <max@graw-online.com>"]
readme = "README.md"
repository = "https://github.com/hrw-fablab/cms"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python="^3.8"
django="4.1.7"
python-dotenv="1.0.0"
wagtail="5.0"
wagtail-localize="1.5"
wagtailmedia="0.14.1"
whitenoise="6.4.0"
wagtail-cache = { git = "https://github.com/torchbox-forks/wagtail-cache.git", branch = "support/wagtail-50" }
python-dateutil="2.8.2"
Office365-REST-Python-Client="2.4.2"
django-components="0.27.2"
mysqlclient="2.1.1"
urllib3 = "1.26.15"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
djhtml = "3.0.6"
ruff = "0.0.270"
pre-commit = "3.3.1"

[settings.virtualenvs]
in-project = "true"

[tool.ruff]
exclude = ["migrations"]